fix reading group, Media names

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,8 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-				<li><a href="{{ site.url }}{{ site.baseurl }}/thesis">Thesis Projects</a></li>
-				<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+				<li><a href="{{ site.url }}{{ site.baseurl }}/thesis">Media</a></li>
+				<li><a href="{{ site.url }}{{ site.baseurl }}/research">Reading Group</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 			</ul>
 		</div>
