update to fix deployment

--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -15,7 +15,7 @@ layout: default
     </div>
     <div class="row text-center">
         <!-- Avatar -->
-        <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ page.image }}" class="img-circle"
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/team/{{ page.image }}" class="img-circle"
             style="max-width: 200px;" />
 
         <!-- Name & Role -->
