--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,13 +11,22 @@
 
 			<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">{{ site.title }}</a>
 		</div>
-		<div class="collapse navbar-collapse" id="navbar-collapse-1">
+		<!-- <div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/thesis">Media</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/research">Reading Group</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
+			</ul>
+		</div> -->
+		<div class="collapse navbar-collapse" id="navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="{{ '/' | relative_url }}">Home</a></li>
+				<li><a href="{{ '/team/' | relative_url }}">Team</a></li>
+				<li><a href="{{ '/thesis/' | relative_url }}">Media</a></li>
+				<li><a href="{{ '/research/' | relative_url }}">Reading Group</a></li>
+				<li><a href="{{ '/publications/' | relative_url }}">Publications</a></li>
 			</ul>
 		</div>
 	</div>
