--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,5 +31,8 @@
 	</div>
 </div>
 
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/bootstrap.min.js"></script> -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+<script src="{{ '/assets/js/bootstrap.min.js' | relative_url }}"></script>
