--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<p>{{ site.title }}</p>
-					<img class="img-fluid" src="{{ site.baseurl }}/assets/images/logo/lab-logo.png"
+					<img class="img-fluid" src="{{'/assets/images/logo/lab-logo.png' | relative_url }}"
 						style="max-width: 100px;">
 				</div>
 
